Fix table cell overlap by adjusting colspan in index.html

--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,12 @@ table .w28 {
   height: 50px;
 }
 
+.mondriana tr:nth-child(2) {
+  height: 100px;
+}
+.mondriana tr:nth-child(3) {
+  height: 100px;
+}
 .mondriana tr:nth-child(6) {
   height: 30px;
 }
@@ -106,20 +112,4 @@ table .w28 {
 .black {
   background-color: black;
   /* color: white; */
-}
-
-/* ROW HEIGHT CLASSES */
-.h50 {
-  height: 50px;
-}
-.h100 {
-  height: 100px;
-}
-
-.h30 {
-  height: 30px;
-}
-
-.h20 {
-  height: 20px;
 }
